# DDCRM-Playerok

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  entrypoint.sh  pyproject.toml
ddcrm_playerok_worker/: config.py  errors.py  main.py  models.py  playerok_adapter.py  security.py  storage.py
docs/: playerok-universal-contract-gaps.md
tests/: test_marketplace_validation.py  test_storage_account_binding.py  test_worker_api_security_and_idempotency.py
