[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddcrm-playerok-worker"
version = "0.1.0"
description = "DDCRM Playerok worker runtime (OpenAPI v2 worker contract wrapper)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "cryptography>=45.0.0",
  "requests>=2.31.0",
  "curl-cffi>=0.13.0",
  "wrapper-tls-requests>=1.1.4",
  "requests_toolbelt>=0.10.1",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]

[project.scripts]
ddcrm-playerok-worker = "ddcrm_playerok_worker.main:run"

[tool.setuptools.packages.find]
include = ["ddcrm_playerok_worker*"]

[tool.uvicorn]
factory = false
